# pulmoalert

./: .gitignore  DEPLOYMENT_FINAL.md  Dockerfile  README.md  generate_uv_lock.sh  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  grader.py  logger.py  models.py  tasks.py
server/: app.py
