[project]
name = "pulmoalert-openenv"
version = "0.1.0"
description = "PulmoAlert: OpenEnv environment for oxygen monitoring and emergency alert simulation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Shreya and Team", email = "contact@example.com"}
]
dependencies = [
    "openenv-core",
    "pydantic>=1.10.0",
    "fastapi",
    "uvicorn",
    "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"